2002-03-26  Shivram U  <shivaram.upadhyayula@wipro.com>

	* src/main.c: Setting the default icon with the absolute path to the
	pixmap file.
	* src/Makefile.am: Changes related to the above.

2002-03-18  Jaka Mocnik  <jaka@gnu.org>

	* src/chartable.c: only show chars < 0x7f.
	* src/ghex-mdi.[ch]: set state of insert toggle item and group type
	radio items when view changes.
	* src/hex-document-ui.c: removed some obsolete code.
	* src/bonobo-mdi.c: removed some obsolete code.
	attempt to enable dragging of notebook pages to new top level windows.
	still crashes some but this needs fixing!
	* src/gtkhex.c (is_displayable): make it stricter as the previous
	incarnation caused trouble to pango.

2002-03-10  Shivram U  <shivaram.upadhyayula@wipro.com>

	* configure.in: Added gettext changes.
	* src/main.c : (main) Added locale changes.
	* src/print.c, src/ui.c : Completed the print functionality changes.
	* src/preferences.c : (apply_changes_cb) Reverting back to the old
	functionality. Changes to group type does not update the views
 
2002-03-08  Laszlo Peter  <laca@ireland.sun.com>

	* configure.in: check for popt, define POPT_LIBS
	* src/Makefile.am: link to POPT_LIBS

2002-03-06  Shivram U  <shivaram.upadhyayula@wipro.com>
	* Makefile.am : Added desktop rule to install the ghex.desktop file
	and the gnome-ghex.png icon.
	* Added ghex.desktop.in file to the repository.
	* src/print.c, src/ui.c : print functionality changes.

2002-03-05  Shivram U  <shivaram.upadhyayula@wipro.com>
	* src/preferences.c : Fix for #71467 and #71468.
	* src/print.c : Enabled print preview functionality.
	* src/ui.c : Changed the data_font_name and header_font_name to be the
	the full font name and size. Also updated ghex2.schemas file.

2002-03-05  Shivram U  <shivaram.upadhyayula@wipro.com>
	* src/bonobo-mdi.c : (bonobo_mdi_show_status) Now using 
	bonobo_ui_component_set_status() to set the status.
	(bonobo_mdi_flash), (remove_message_timeout) Using 