@@ -3,16 +3,20 @@ Name=GHex
 Name[de]=GHex
 Name[et]=GHex
 Name[no]=GHex
+Name[pl]=GHex
 Name[pt]=GHex
 Name[ru]=GHex
+Name[sk]=GHex
 Name[sv]=GHex
 Name[zh_CN]=GHex
 Comment=Gnome Hexadecimal Editor
 Comment[de]=GNOME Hexadezimal-Editor
 Comment[et]=Gnome 16nd-süsteemi redaktor
 Comment[no]=GNOME hexeditor
+Comment[pl]=Edytor binarny dla GNOME
 Comment[pt]=Editor Hexadecimal Gnome
 Comment[ru]=Шестнадцатиричный редактор для GNOME
+Comment[sk]=Hexadecimálny editor pre GNOME
 Comment[sv]=Hexadecimalredigerare för Gnome
 Comment[zh_CN]=GNOME十六进制编辑器
 Exec=ghex2
