@@ -1,3 +1,10 @@
+2002-03-27  Jaka Mocnik  <jaka@gnu.org>
+
+	* src/ui.c (about_cb): applied a patch from Yogeesh MB to reenable
+	the about dialog. added Shivram to authors.
+	* src/converter.c (set_values): take grouping into account.
+	* src/ghex-mdi.c (ghex_mdi_drag_data_received_handler): made DnD work.
+
 2002-03-26  Shivram U  <shivaram.upadhyayula@wipro.com>
 
 	* src/main.c: Setting the default icon with the absolute path to the
